Logo _and_ title

--- a/layouts/partials/header/basic.html
+++ b/layouts/partials/header/basic.html
@@ -10,19 +10,18 @@
               src="{{ $logo.RelPermalink }}"
               width="{{ div $logo.Width 2 }}"
               height="{{ div $logo.Height 2 }}"
-              class="max-w-[10rem] max-h-[10rem] object-scale-down object-left"
+              class="max-w-[2rem] max-h-[2rem] mr-1 object-scale-down object-left rounded inline-block"
               alt="{{ .Site.Title }}"
             />
           </a>
         {{ end }}
-      {{ else }}
-        <a
-          class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
-          rel="me"
-          href="{{ "" | relLangURL }}"
-          >{{ .Site.Title | markdownify | emojify }}</a
-        >
-      {{- end }}
+      {{ end }}
+      <a
+        class="decoration-primary-500 hover:underline hover:decoration-2 hover:underline-offset-2"
+        rel="me"
+        href="{{ "" | relLangURL }}"
+        >{{ .Site.Title | markdownify | emojify }}</a
+      >
       {{ partial "translations.html" . }}
     </div>
     {{/* Main menu */}}
