--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1741,11 +1741,6 @@ body:has(#menu-controller:checked) {
   margin: 0.25rem;
 }
 
-.-mx-2 {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
-}
-
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -1843,6 +1838,10 @@ body:has(#menu-controller:checked) {
   margin-bottom: 2.25rem !important;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1893,6 +1892,10 @@ body:has(#menu-controller:checked) {
 
 .h-36 {
   height: 9rem;
+}
+
+.max-h-\[2rem\] {
+  max-height: 2rem;
 }
 
 .max-h-\[10rem\] {
@@ -1957,6 +1960,10 @@ body:has(#menu-controller:checked) {
 
 .max-w-3xl {
   max-width: 48rem;
+}
+
+.max-w-\[2rem\] {
+  max-width: 2rem;
 }
 
 .max-w-\[10rem\] {
