--- a/layouts/partials/analytics.html
+++ b/layouts/partials/analytics.html
@@ -6,5 +6,10 @@
       <script defer src="https://cdn.usefathom.com/script.js" data-site="{{ . }}"></script>
     {{ end }}
   {{ end }}
+
+  {{ if isset $.Site.Params.plausible "domain" }}
+    <script defer data-domain="{{ $.Site.Params.plausible.domain }}" src="https://plausible.io/js/plausible.js"></script>
+  {{ end }}
+
   {{ template "_internal/google_analytics.html" . }}
 {{ end }}
