--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -13,7 +13,7 @@
     </section>
   {{ end }}
   <section class="-mx-2 flex flex-wrap overflow-hidden">
-    {{ range .Data.Terms }}
+    {{ range .Data.Terms.ByCount }}
       <article class="my-3 w-full overflow-hidden px-2 sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5">
         <h2 class="flex items-center">
           <a
