Give taxonomy list section a semantic class name

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,12 @@ body button {
   @apply hidden;
 }
 
+/* Taxonomy List */
+
+.taxonomy-list {
+  @apply flex flex-wrap -mx-2 overflow-hidden;
+}
+
 /* Hamburger menu */
 body:has(#menu-controller:checked) {
   @apply overflow-y-hidden;
