--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -12,7 +12,7 @@
       </div>
     </section>
   {{ end }}
-  <section class="flex flex-wrap -mx-2 overflow-hidden">
+  <section class="taxonomy-list">
     {{ range .Data.Terms.ByCount }}
       <article class="w-full px-2 my-3 overflow-hidden sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5">
         <h2 class="flex items-center">
