--- a/layouts/_default/simple.html
+++ b/layouts/_default/simple.html
@@ -8,7 +8,7 @@
         {{ .Title | emojify }}
       </h1>
     </header>
-    <section class="prose mt-6 max-w-full dark:prose-invert">
+    <section class="prose mt-6 max-w-prose dark:prose-invert">
       {{ .Content | emojify }}
     </section>
     <footer class="pt-8">
